--- a/mainapp/templates/mainapp/docs.html
+++ b/mainapp/templates/mainapp/docs.html
@@ -3,6 +3,9 @@
 {% block content %}
 	<!-- Content -->
 	<main class="pt-4">
+		<div class="img-head mb-5">
+			<img src="/static/images/vnutri-document.jpg" alt="">
+		</div>	
 		<div class="container">
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
@@ -31,7 +34,7 @@
 				</form>
 			</div>
 
-					<p class="text-secondary">Элементы 1-10 из 255</p>
+					<p class="text-secondary">Элементы 1-10 из 15</p>
 		<div class="table-responsive">
 			<table class="table table-list">
 				<thead>
