--- a/mainapp/templates/mainapp/regional_office_detail.html
+++ b/mainapp/templates/mainapp/regional_office_detail.html
@@ -17,7 +17,7 @@
 	</div>
 
 	<div class="map pb-1 mb-4" id="mapRegion">
-		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A59068a2aec599036f416a9544c76f627f23d439f166fccde94df8f4637c6af72&amp;width=100%25&amp;height=350&amp;lang=ru_RU&amp;scroll=true;"></script>
+		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A59068a2aec599036f416a9544c76f627f23d439f166fccde94df8f4637c6af72&amp;width=100%25&amp;height=350&amp;lang=ru_RU&amp;scroll=false;"></script>
 	</div>
 
 	<div class="contacts-ro pt-4 pb-3">
