--- a/mainapp/templates/mainapp/account_conf.html
+++ b/mainapp/templates/mainapp/account_conf.html
@@ -65,7 +65,12 @@
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Дата проведения&nbsp;<span class="text-danger">*</span></label>
 										<div class="col-6 col-sm-4 col-lg-3">
-											<input type="date" class="form-control form-control-sm" placeholder="" value="">
+											<div class="input-group input-group-sm">
+												<input type="text" class="form-control datepicker-here" placeholder="дд.мм.гггг" aria-label="дд.мм.гггг" aria-describedby="">
+												<div class="input-group-append">
+													<span class="input-group-text"><i class="fa fa-calendar"></i></span>
+												</div>
+											</div>
 										</div>
 									</div>
 									<div class="form-group row">
@@ -201,7 +206,12 @@
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Дата проведения&nbsp;<span class="text-danger">*</span></label>
 										<div class="col-6 col-sm-4 col-lg-3">
-											<input type="date" class="form-control form-control-sm" placeholder="" value="15.10.2019" disabled>
+											<div class="input-group input-group-sm">
+												<input type="text" class="form-control datepicker-here" placeholder="дд.мм.гггг" aria-label="дд.мм.гггг" aria-describedby="" value="15.10.2018" disabled>
+												<div class="input-group-append">
+													<span class="input-group-text"><i class="fa fa-calendar"></i></span>
+												</div>
+											</div>
 										</div>
 									</div>
 									<div class="form-group row">
