--- a/mainapp/templates/mainapp/conf.html
+++ b/mainapp/templates/mainapp/conf.html
@@ -17,54 +17,53 @@
 			<h5>Быстрый поиск</h5>
 			<form>
 				<div class="form-row">
-                    <div class="form-group col-md-4">
-                        <label for="" class="mb-1">Региональное отделение</label>
-                        <select class="form-control form-control-sm">
-                            <option selected="">Все</option>
-                            <option>Москва</option>
-                            <option>Московская область</option>
-                            <option>Калужская область</option>
-                            <option>Ленинградская область</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-sm-6 col-md-4 col-lg-2">
-                        <label for="" class="mb-1">Год проведения</label>
-                        <select class="form-control form-control-sm">
-                            <option selected="">Все</option>
-                            <option>2016</option>
-                            <option>2017</option>
-                            <option>2018</option>
-                            <option>2019</option>
-                            <option>2020</option>
-                            <option>2021</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-sm-6 col-md-4 col-lg-2">
-                        <label for="" class="mb-1">Статус проведения</label>
-                        <select class="form-control form-control-sm">
-                            <option selected="">Все</option>
-                            <option>запланирована</option>
-                            <option>проведена</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <button type="submit" class="btn btn-outline-primary btn-xs"><i class="fa fa-search"></i> Найти</button>
-                        <button type="button" class="btn btn-link btn-xs">Сбросить</button>
-                    </div>
-                </div>
+					<div class="form-group col-md-4">
+						<label for="" class="mb-1">Региональное отделение</label>
+						<select class="form-control form-control-sm">
+							<option selected="">Все</option>
+							<option>Москва</option>
+							<option>Московская область</option>
+							<option>Калужская область</option>
+							<option>Ленинградская область</option>
+						</select>
+					</div>
+					<div class="form-group col-sm-6 col-md-4 col-lg-2">
+						<label for="" class="mb-1">Год проведения</label>
+						<select class="form-control form-control-sm">
+							<option selected="">Все</option>
+							<option>2016</option>
+							<option>2017</option>
+							<option>2018</option>
+							<option>2019</option>
+							<option>2020</option>
+							<option>2021</option>
+						</select>
+					</div>
+					<div class="form-group col-sm-6 col-md-4 col-lg-2">
+						<label for="" class="mb-1">Статус проведения</label>
+						<select class="form-control form-control-sm">
+							<option selected="">Все</option>
+							<option>запланирована</option>
+							<option>проведена</option>
+						</select>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-auto">
+						<button type="submit" class="btn btn-outline-primary btn-xs"><i class="fa fa-search"></i> Найти</button>
+						<button type="button" class="btn btn-link btn-xs">Сбросить</button>
+					</div>
+				</div>
 			</form>
 		</div>
-
+		<p class="text-secondary">Элементы 1-10 из 15</p>
 		<div class="card-all">
 			<div class="row">
-				<div class="col-sm-6 col-lg-4 my-3">
+				<div class="col-sm-6 col-lg-4 mb-3">
 					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top img-fluid" src="{% static 'images/img-kaluga.png' %}" alt="Герб Калужской области">
-							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.11.2019</div>
+						<div class="card-header d-flex justify-content-between align-items-center">
+							<div class="font-weight-bold text-primary">Калужская область</div>
+							<div>01.11.2019</div>
 						</div>
 						<div class="card-body">
 							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2019</h6>
@@ -85,12 +84,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-6 col-lg-4 my-3">
+				<div class="col-sm-6 col-lg-4 mb-3">
 					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top img-fluid" src="{% static 'images/img-mosobl.png' %}" alt="Герб Калужской области">
-							<div class="card-img-overlay">Московская область</div>
-							<div class="card-img-overlay-right">26.09.2019</div>
+						<div class="card-header d-flex justify-content-between align-items-center">
+							<div class="font-weight-bold text-primary">Московская область</div>
+							<div>26.09.2019</div>
 						</div>
 						<div class="card-body">
 							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Московской области 2019</h6>
@@ -111,12 +109,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-6 col-lg-4 my-3">
+				<div class="col-sm-6 col-lg-4 mb-3">
 					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top img-fluid" src="{% static 'images/img-kaluga.png' %}" alt="Герб Калужской области">
-							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.11.2018</div>
+						<div class="card-header d-flex justify-content-between align-items-center">
+							<div class="font-weight-bold text-primary">Калужская область</div>
+							<div>01.11.2018</div>
 						</div>
 						<div class="card-body">
 							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2018</h6>
@@ -137,12 +134,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-6 col-lg-4 my-3">
+				<div class="col-sm-6 col-lg-4 mb-3">
 					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top img-fluid" src="{% static 'images/img-mosobl.png' %}" alt="Герб Калужской области">
-							<div class="card-img-overlay">Московская область</div>
-							<div class="card-img-overlay-right">26.09.2018</div>
+						<div class="card-header d-flex justify-content-between align-items-center">
+							<div class="font-weight-bold text-primary">Московская область</div>
+							<div>01.11.2018</div>
 						</div>
 						<div class="card-body">
 							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Московской области 2018</h6>
@@ -163,15 +159,14 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-6 col-lg-4 my-3">
+				<div class="col-sm-6 col-lg-4 mb-3">
 					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top img-fluid" src="{% static 'images/img-kaluga.png' %}" alt="Герб Калужской области">
-							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.02.2017</div>
+						<div class="card-header d-flex justify-content-between align-items-center">
+							<div class="font-weight-bold text-primary">Калужская область</div>
+							<div>01.11.2017</div>
 						</div>
 						<div class="card-body">
-							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2017</h6>
+							<h6 class="card-title text-secondary mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2017</h6>
 							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Актуализация профессиональных стандартов</h6>
 							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Обнинск, ул. Колхозная, д. 118A</p>
 							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
