--- a/mainapp/templates/mainapp/includes/modal-regConference.html
+++ b/mainapp/templates/mainapp/includes/modal-regConference.html
@@ -15,7 +15,12 @@
 					<div class="form-row">
 						<div class="form-group col-sm-4">
 							<label for="" class="col-form-label col-form-label-sm">Дата проведения&nbsp;<span class="text-danger">*</span></label>
-							<input type="date" class="form-control form-control-sm" placeholder="" value="">
+							<div class="input-group input-group-sm">
+								<input type="text" class="form-control datepicker-here" placeholder="дд.мм.гггг" aria-label="дд.мм.гггг" aria-describedby="">
+								<div class="input-group-append">
+									<span class="input-group-text"><i class="fa fa-calendar"></i></span>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="form-group">
