--- a/mainapp/templates/mainapp/registration.html
+++ b/mainapp/templates/mainapp/registration.html
@@ -3,10 +3,85 @@
 {% block content %}
 	<!-- Content -->
 	<main class="pt-4">
-		
 		<div class="container">
-			<h2>Регистрация</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat aut, quod corrupti molestias et nihil numquam culpa. Autem est tempora sunt ipsa soluta illo, atque, porro nulla, maiores, ullam neque.</p>
+			<nav aria-label="breadcrumb">
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Регистрация</li>
+				</ol>
+			</nav>
+
+			<h4 class="title-page">Регистрация</h4>
+
+			<div class="search p-3 mb-4">
+				<!-- <h5>Быстрый поиск</h5> -->
+				<form>
+					<div class="form-group row">
+						<label for="colFormLabelSm" class="col-sm-4 col-form-label col-form-label-sm">Региональное отделение&nbsp;<span class="text-danger">*</span></label>
+						<div class="col-sm-6">
+							<select class="form-control form-control-sm" required="">
+								<option>-</option>
+								<option selected="">Астраханская область</option>
+								<option>Тамбовская область</option>
+								<option>Воронежская область</option>
+								<option>Московская область</option>
+								<option>Хабаровский край</option>
+								<option>Краснодарский край</option>
+							</select>
+						</div>
+					</div>
+					<div class="form-group row">
+						<label for="colFormLabelSm" class="col-sm-4 col-form-label col-form-label-sm">ФИО&nbsp;<span class="text-danger">*</span></label>
+						<div class="col-sm-6">
+							<input type="text" class="form-control form-control-sm" required="">
+						</div>
+					</div>
+					<div class="form-group row">
+						<label for="colFormLabelSm" class="col-sm-4 col-form-label col-form-label-sm">Город проживания (населенный пункт)&nbsp;<span class="text-danger">*</span></label>
+						<div class="col-sm-3">
+							<input type="text" class="form-control form-control-sm" required="">
+						</div>
+					</div>
+					<div class="form-group row">
+						<label for="colFormLabelSm" class="col-sm-4 col-form-label col-form-label-sm">Телефон / Email&nbsp;<span class="text-danger">*</span></label>
+						<div class="col-sm-3">
+							<input type="text" class="form-control form-control-sm" placeholder="tel">
+						</div>
+						<div class="col-sm-3">
+							<input type="text" class="form-control form-control-sm" placeholder="email" required="">
+						</div>
+					</div>
+					<div class="form-group row">
+						<label for="colFormLabelSm" class="col-sm-4 col-form-label col-form-label-sm">Место работы</label>
+						<div class="col-sm-3">
+							<input type="text" class="form-control form-control-sm">
+						</div>
+					</div>
+					<div class="form-group row">
+						<label for="colFormLabelSm" class="col-sm-4 col-form-label col-form-label-sm">Должность</label>
+						<div class="col-sm-3">
+							<input type="text" class="form-control form-control-sm">
+						</div>
+					</div>
+					<div class="form-group row">
+						<div class="offset-sm-4 col-sm-6">
+							<div class="form-check">
+							<input class="form-check-input" type="checkbox" id="gridCheck">
+							<label class="form-check-label" for="gridCheck">
+								подписка на рассылку от РСПС
+							</label>
+						</div>
+						</div>
+						
+					</div>
+					<div class="row">
+						<div class="col-auto">
+							<button type="submit" class="btn btn-outline-danger btn-sm">Отправить<i class="fa fa-angle-right ml-2"></i></button>
+							<button type="button" class="btn btn-link btn-sm">Отмена</button>
+						</div>
+					</div>
+				</form>
+			</div>
 		</div>
 	</main> 
 <!-- End Content -->
