--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,14 +159,6 @@ footer hr {
 
 /* End Modal */
 main {
-  /* .card-top {
-		img {
-	    	object-fit: none;
-			object-position: center;
-			height: 176px;
-			width: 100%;
-		}
-	} */
   /* All Conferences */
   /* End Conferences */ }
   main h4.title-page {
@@ -282,13 +274,40 @@ main {
     -webkit-transition: 0.5s;
     transition: 0.5s; }
   main .card-all .card-top {
-    height: 200px; }
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+    /* position: relative;
+			  width: 100%;
+			  height: 200px;
+			  overflow: hidden; */
+    /* height: 200px;
+			overflow: hidden;       
+		    display: table-cell;
+		    text-align: center;
+		    vertical-align: middle; */ }
     main .card-all .card-top img {
       height: 100%;
-      width: auto;
-      margin-left: auto;
-      margin-right: auto;
-      display: block; }
+      min-width: 100%;
+      left: 50%;
+      position: relative;
+      -webkit-transform: translateX(-50%);
+      transform: translateX(-50%);
+      /* position: absolute;
+				  left: 50%;
+				  top: 50%;
+				  height: 100%;
+				  width: auto;
+				  -webkit-transform: translate(-50%,-50%);
+				      -ms-transform: translate(-50%,-50%);
+				          transform: translate(-50%,-50%); */
+      /* max-width: 100%;
+    			display: inline-block; */
+      /* height: 100%;
+			    width: auto;
+			    margin-left: auto;
+			    margin-right: auto;
+			    display: block; */ }
     main .card-all .card-top .card-img-overlay {
       position: absolute;
       top: 0;
@@ -358,3 +377,7 @@ main {
     main .about-ro .table-sm tr td:first-child {
       text-transform: uppercase;
       background-color: #e1ecf2; }
+
+/* Calendar */
+.datepicker {
+  z-index: 10000; }
