--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -464,6 +464,49 @@ main {
 	
 	.search {
 		background: #E8EEF2;
+		.form-check-input {
+			margin-top: 0.3rem;
+		}
+	}
+
+	.registration {
+		.row	{
+			border: solid 1px #e5e5e5;
+		    vertical-align: middle;
+		    border-bottom: 0;
+		    margin: 0;
+		    padding-top: 1rem;
+		    padding-bottom: 1rem;
+		    background: #fefefe;
+		    background: -moz-linear-gradient(top, #fefefe 1%, #f2f7f9 100%);
+		    background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#fefefe), color-stop(100%,#f2f7f9));
+		    background: -webkit-linear-gradient(top, #fefefe 1%,#f2f7f9 100%);
+		    background: -o-linear-gradient(top, #fefefe 1%,#f2f7f9 100%);
+		    background: -ms-linear-gradient(top, #fefefe 1%,#f2f7f9 100%);
+		    background: linear-gradient(to bottom, #fefefe 1%,#f2f7f9 100%);
+		    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#f2f7f9',GradientType=0 );
+			&:hover {
+				background: #f0fbdc;
+			    background: -moz-linear-gradient(top, #f0fbdc 0%, #e4efd1 100%);
+			    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f0fbdc), color-stop(100%,#e4efd1));
+			    background: -webkit-linear-gradient(top, #f0fbdc 0%,#e4efd1 100%);
+			    background: -o-linear-gradient(top, #f0fbdc 0%,#e4efd1 100%);
+			    background: -ms-linear-gradient(top, #f0fbdc 0%,#e4efd1 100%);
+			    background: linear-gradient(to bottom, #f0fbdc 0%,#e4efd1 100%);
+			    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0fbdc', endColorstr='#e4efd1',GradientType=0 );
+			}
+		    &:last-child {
+		    	border-bottom: solid 1px #e5e5e5;
+		    }
+			label {
+				text-transform: uppercase;
+				font-size: 0.8rem;
+				color: #6c757d;
+			}
+		    .form-check-input {
+				margin-top: 0.3rem;
+			}
+		}
 	}
 
 	.bg-red {
