--- a/mainapp/templates/mainapp/account_news.html
+++ b/mainapp/templates/mainapp/account_news.html
@@ -16,6 +16,9 @@
 
 		<ul class="nav nav-tabs mb-4 mb-xl-5">
 			<li class="nav-item">
+				<a class="nav-link" href="{% url 'account_user' %}">Учетная запись</a>
+			</li>
+			<li class="nav-item">
 				<a class="nav-link" href="{% url 'account_about' %}">О подразделении</a>
 			</li>
 			<li class="nav-item">
